Chatroom fixes
